--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "build": "rollup -c -w"
     },
     "devDependencies": {
+        "@rollup/plugin-alias": "^3.1.8",
         "@rollup/plugin-node-resolve": "^13.1.1",
         "rollup": "^2.61.1",
         "rollup-plugin-css-only": "^3.1.0",
@@ -26,5 +27,6 @@
     "engines": {
         "node": ">=10",
         "pnpm": ">=3"
-    }
+    },
+    "type": "module"
 }
