plot json descriptor + minor change in App

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "liveServer.settings.wait": 1200
+    "liveServer.settings.wait": 1200,
+    "json.schemas": [
+        {
+            "fileMatch": ["/data/*.json"],
+            "url": "/data/schema.json"
+        }
+    ]
 }
